CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(LatticeFlow)
SET(LATTICEFLOW_VERSION_MAJOR 0)
SET(LATTICEFLOW_VERSION_MINOR 1)
SET(LATTICEFLOW_VERSION_PATCH 0)

INCLUDE(cmake/benchmarking.cmake NO_POLICY_SCOPE)
INCLUDE(cmake/testing.cmake NO_POLICY_SCOPE)

SET(CMAKE_CXX_FLAGS_DEBUG
    "${CMAKE_CXX_FLAGS_DEBUG} \
    -std=c++11 \
    -stdlib=libc++")
SET(CMAKE_CXX_FLAGS_RELEASE
    "${CMAKE_CXX_FLAGS_RELEASE} \
    -std=c++11 \
    -stdlib=libc++")

ADD_SUBDIRECTORY(vendor/boost)
ADD_SUBDIRECTORY(vendor/googlebenchmark)
ADD_SUBDIRECTORY(vendor/googletest)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GBENCH_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})

MESSAGE(${BOOST_LINK_DIRS})

LINK_DIRECTORIES(${BOOST_LINK_DIRS})

ENABLE_TESTING()
ADD_SUBDIRECTORY(lattices)
ADD_SUBDIRECTORY(flow)
ADD_SUBDIRECTORY(key_value_stores)
