CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(LatticeFlow)
SET(LATTICEFLOW_VERSION_MAJOR 0)
SET(LATTICEFLOW_VERSION_MINOR 1)
SET(LATTICEFLOW_VERSION_PATCH 0)

INCLUDE(cmake/benchmarking.cmake NO_POLICY_SCOPE)
INCLUDE(cmake/testing.cmake NO_POLICY_SCOPE)

SET(CMAKE_CXX_FLAGS_COMMON
    "-std=c++11 \
    -stdlib=libc++ \
    -Wall \
    -Wextra \
    -Werror \
    -fsanitize=address")
SET(CMAKE_CXX_FLAGS_DEBUG
    "${CMAKE_CXX_FLAGS_DEBUG} \
    ${CMAKE_CXX_FLAGS_COMMON}")
SET(CMAKE_CXX_FLAGS_RELEASE
    "${CMAKE_CXX_FLAGS_RELEASE} \
    ${CMAKE_CXX_FLAGS_COMMON}
    -O3")

ADD_SUBDIRECTORY(vendor/boost)
ADD_SUBDIRECTORY(vendor/googlebenchmark)
ADD_SUBDIRECTORY(vendor/googletest)
ADD_SUBDIRECTORY(vendor/zeromq)
ADD_SUBDIRECTORY(vendor/zeromqcpp)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GBENCH_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${ZEROMQCPP_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${ZEROMQ_INCLUDE_DIRS})

LINK_DIRECTORIES(${BOOST_LINK_DIRS})
LINK_DIRECTORIES(${ZEROMQ_LINK_DIRS})

ENABLE_TESTING()
ADD_SUBDIRECTORY(click)
ADD_SUBDIRECTORY(concurrency)
ADD_SUBDIRECTORY(flow)
ADD_SUBDIRECTORY(key_value_stores)
ADD_SUBDIRECTORY(lattices)
ADD_SUBDIRECTORY(zmq_util)
